<resources>
    <string name="app_name">LaundroPool</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="Log_in">LOG IN</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_open_pools">My Open Pools</string>
    <string name="menu_past_pools">Past Pools</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="LaundroPool">LaundroPool</string>

    <string name="title_activity_on_boarding">OnBoarding</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="register_fragment_label">Register Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_register_fragment">Hello Register fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>