<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_open_pool"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_open_pools"/>
        <item
            android:id="@+id/nav_past_pool"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_past_pools"/>
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_notifications"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_help"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_about"/>

    </group>
</menu>